--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-requests==2.24.0
-Flask==1.1.2
-pandas==1.0.5
-APScheduler==3.6.3
-selenium==3.141.0
-python-dotenv==0.15.0
+python-dotenv
+requests
